--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+
+        <label class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.lowerCase">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">Include Lowercase Characters</span>
+          </label>
+            
+          
+                      <br />
+                      <label class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.numbers">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">Include Numbers</span>
+          </label>
+                      <br />
+                      <label class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.symbols">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">Include Special Characters </span>
+          </label>
+                            <br />
+                       <label class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.upperCase">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">Include Uppercase Characters</span>
+          </label>
+
         <div class="card-body">
           <textarea
             readonly
