--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
+        <div class="card-footer">
+            <button id="Copy" class="btn">Copy To ClipBoard</button>
+          </div>
       </div>
     </div>
     <script src="code.js"></script>
