--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+        <input type="range" min="0" max="160" name="slidebar" id="slidebar">
 
         <label class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.lowerCase">
