--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
-        <input type="range" min="0" max="160" name="slidebar" id="slidebar">
+        <div class="slidecontainer">
+          <input type="range" min="1" max="160" class="slider" id="myRange">
+          <p>Value: <span id="demo"></span></p>
+        </div>
 
         <label class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.lowerCase">
