added event listener

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <label class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.lowerCase">
+            <input type="checkbox" id="lowerCase" ng-model="checkboxModel.lowerCase">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Include Lowercase Characters</span>
           </label>
@@ -30,19 +30,19 @@
           
                       <br />
                       <label class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.numbers">
+            <input type="checkbox" id= "number" ng-model="checkboxModel.numbers">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Include Numbers</span>
           </label>
                       <br />
                       <label class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.symbols">
+            <input type="checkbox" id="special" ng-model="checkboxModel.symbols">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Include Special Characters </span>
           </label>
-                            <br />
+                            <br/>
                        <label class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" ng-model="checkboxModel.upperCase">
+            <input type="checkbox" id= "upperCase" ng-model="checkboxModel.upperCase">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Include Uppercase Characters</span>
           </label>
