--- a/index.html
+++ b/index.html
@@ -8,60 +8,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Password Generator</h1>
-      </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
-        <div class="slidecontainer">
-          <input type="range" min="1" max="160" class="slider" id="myRange">
-          <p>Value: <span id="demo"></span></p>
-        </div>
-
-        <label class="custom-control custom-checkbox">
-            <input type="checkbox" id="lowerCase" ng-model="checkboxModel.lowerCase">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Include Lowercase Characters</span>
-          </label>
-            
-          
-                      <br />
-                      <label class="custom-control custom-checkbox">
-            <input type="checkbox" id= "number" ng-model="checkboxModel.numbers">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Include Numbers</span>
-          </label>
-                      <br />
-                      <label class="custom-control custom-checkbox">
-            <input type="checkbox" id="special" ng-model="checkboxModel.symbols">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Include Special Characters </span>
-          </label>
-                            <br/>
-                       <label class="custom-control custom-checkbox">
-            <input type="checkbox" id= "upperCase" ng-model="checkboxModel.upperCase">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Include Uppercase Characters</span>
-          </label>
-
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
-        </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
-        </div>
-        <div class="card-footer">
-            <button id="Copy" class="btn">Copy To ClipBoard</button>
-          </div>
+    <div class="container">
+      <h2>Password Generator</h2>
+      <div class="result-container">
+        <span id="result"></span>
+        <button class="btn" id="clipboard">
+          <i class="far fa-clipboard"></i>
+        </button>
       </div>
+      <div class="settings">
+        <div class="setting">
+          <label>Password length</label>
+          <input type="number" id="length" min='4' max='20' value='20' />
+        </div>
+        <div class="setting">
+          <label>Include uppercase letters</label> 
+          <input type="checkbox" id="uppercase" checked />
+        </div>
+        <div class="setting">
+          <label>Include lowercase letters</label> 
+          <input type="checkbox" id="lowercase" checked />
+        </div>
+        <div class="setting">
+          <label>Include numbers</label> 
+          <input type="checkbox" id="numbers" checked />
+        </div>
+        <div class="setting">
+          <label>Include symbols</label> 
+          <input type="checkbox" id="symbols" checked />
+        </div>
+      </div>
+      <button class="btn btn-large" id="generate">
+        Generate password
+      </button>
     </div>
     <script src="code.js"></script>
   </body>
