Starting from scratch. Added HTMl ele and have function to produce random chara

--- a/index.html
+++ b/index.html
@@ -8,39 +8,62 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h2>Password Generator</h2>
-      <div class="result-container">
-        <span id="result"></span>
-        <button class="btn" id="clipboard">
-          <i class="far fa-clipboard"></i>
-        </button>
-      </div>
-      <div class="settings">
-        <div class="setting">
-          <label>Password length</label>
-          <input type="number" id="length" min='4' max='20' value='20' />
+    <div class="wrapper">
+      <header>
+        <h1>Password Generator</h1>
+      </header>
+      <div class="card">
+        <div class="card-header">
+          <h2>Generate a Password</h2>
         </div>
+        
+    <!--user input length of password-->
+        <div class="settings">
+          <div class="setting"></div>
+            <label>Password length</label>
+            <input type="number" id="length" min='8' max='128' value='20'/>
+          </div>
+
+    <!-- include Upper case in password-->
         <div class="setting">
           <label>Include uppercase letters</label> 
           <input type="checkbox" id="uppercase" checked />
         </div>
+
+        <!-- include lowerCase in password-->
         <div class="setting">
           <label>Include lowercase letters</label> 
           <input type="checkbox" id="lowercase" checked />
         </div>
+
+    <!-- include numbers in password-->
         <div class="setting">
           <label>Include numbers</label> 
           <input type="checkbox" id="numbers" checked />
         </div>
+
+    <!-- include symbol in password-->
         <div class="setting">
           <label>Include symbols</label> 
           <input type="checkbox" id="symbols" checked />
         </div>
+        </div>
+
+    <!-- text input where the password will appear-->
+        <div class="card-body">
+          <textarea
+            readonly
+            id="password"
+            placeholder="Your Secure Password"
+            aria-label="Generated Password"
+          ></textarea>
+        </div>
+
+    <!-- button to generate password-->  
+        <div class="card-footer">
+          <button id="generate" class="btn">Generate Password</button>
+        </div>
       </div>
-      <button class="btn btn-large" id="generate">
-        Generate password
-      </button>
     </div>
     <script src="code.js"></script>
   </body>
