--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <!--wrapper is the div that is wrapping the entire box of password-->
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
@@ -62,7 +63,10 @@
     <!-- button to generate password-->  
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          
         </div>
+        <button class="btn" id="copy"> copy </button>
+        
       </div>
     </div>
     <script src="code.js"></script>
