--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         
     <!-- button to copy password-->
-        <div class="card-footer">
+        <div class="generate content content-wrap">
           <button id="copy" class="btn"> Copy Password</button>
           
         </div>
